[gd_scene load_steps=16 format=2]

[ext_resource path="res://scripts/game.gd" type="Script" id=1]
[ext_resource path="res://scenes/enemy_base.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/maps/map2.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/ui/durability_text.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/ui/ressource.tscn" type="PackedScene" id=5]
[ext_resource path="res://textures/fire.png" type="Texture" id=6]
[ext_resource path="res://textures/ice.png" type="Texture" id=7]
[ext_resource path="res://textures/wood.png" type="Texture" id=8]
[ext_resource path="res://scenes/ui/construction_menu.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/towers/tower_projectile.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/towers/tower_aoe.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/ui/upgrade_menu.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/ui/anouncement.tscn" type="PackedScene" id=13]
[ext_resource path="res://scenes/ui/end_game_text.tscn" type="PackedScene" id=14]

[sub_resource type="GDScript" id=1]

script/source = "extends Camera2D

var _duration = 0.0
var _period_in_ms = 0.0
var _amplitude = 0.0
var _timer = 0.0
var _last_shook_timer = 0
var _previous_x = 0.0
var _previous_y = 0.0
var _last_offset = Vector2(0, 0)

# Shake with decreasing intensity while there's time remaining.
func _process(delta):
    # Only shake when there's shake time remaining.
    if _timer == 0:
        return
    # Only shake on certain frames.
    _last_shook_timer = _last_shook_timer + delta
    # Be mathematically correct in the face of lag; usually only happens once.
    while _last_shook_timer >= _period_in_ms:
        _last_shook_timer = _last_shook_timer - _period_in_ms
        # Lerp between [amplitude] and 0.0 intensity based on remaining shake time.
        var intensity = _amplitude * (1 - ((_duration - _timer) / _duration))
        # Noise calculation logic from http://jonny.morrill.me/blog/view/14
        var new_x = rand_range(-1.0, 1.0)
        var x_component = intensity * (_previous_x + (delta * (new_x - _previous_x)))
        var new_y = rand_range(-1.0, 1.0)
        var y_component = intensity * (_previous_y + (delta * (new_y - _previous_y)))
        _previous_x = new_x
        _previous_y = new_y
        # Track how much we've moved the offset, as opposed to other effects.
        var new_offset = Vector2(x_component, y_component)
        set_offset(get_offset() - _last_offset + new_offset)
        _last_offset = new_offset
    # Reset the offset when we're done shaking.
    _timer = _timer - delta
    if _timer <= 0:
        _timer = 0
        set_offset(get_offset() - _last_offset)

# Kick off a new screenshake effect.
func shake(duration, frequency, amplitude):
    # Initialize variables.
    _duration = duration
    _timer = duration
    _period_in_ms = 1.0 / frequency
    _amplitude = amplitude
    _previous_x = rand_range(-1.0, 1.0)
    _previous_y = rand_range(-1.0, 1.0)
    # Reset previous offset, if any.
    set_offset(get_offset() - _last_offset)
    _last_offset = Vector2(0, 0)
"

[node name="game" type="Node2D" index="0"]

script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]
enemy_scene = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="." index="0"]

anchor_mode = 0
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
script = SubResource( 1 )

[node name="map2" parent="." index="1" instance=ExtResource( 3 )]

position = Vector2( 0, -1.50734 )
_sections_unfolded = [ "Transform" ]

[node name="towers" type="Node2D" parent="." index="2"]

_sections_unfolded = [ "Transform" ]

[node name="ui" type="Control" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="durability_text" parent="ui" index="0" instance=ExtResource( 4 )]

visible = false

[node name="ressource_fire" parent="ui" index="1" instance=ExtResource( 5 )]

editor/display_folded = true
margin_top = 54.0
margin_bottom = 104.0
_sections_unfolded = [ "Rect", "Size Flags" ]

[node name="TextureRect" parent="ui/ressource_fire/Panel" index="0"]

texture = ExtResource( 6 )

[node name="ressource_ice" parent="ui" index="2" instance=ExtResource( 5 )]

editor/display_folded = true
margin_top = 109.0
margin_bottom = 159.0
_sections_unfolded = [ "Rect", "Size Flags" ]

[node name="TextureRect" parent="ui/ressource_ice/Panel" index="0"]

texture = ExtResource( 7 )

[node name="ressource_wood" parent="ui" index="3" instance=ExtResource( 5 )]

editor/display_folded = true
_sections_unfolded = [ "Rect", "Size Flags" ]

[node name="TextureRect" parent="ui/ressource_wood/Panel" index="0"]

texture = ExtResource( 8 )

[node name="construction_menu" parent="ui" index="4" instance=ExtResource( 9 )]

visible = false
_sections_unfolded = [ "Mouse", "Rect" ]
projectile_tower_base = ExtResource( 10 )
aoe_tower_base = ExtResource( 11 )

[node name="upgrade_menu" parent="ui" index="5" instance=ExtResource( 12 )]

visible = false

[node name="start_wave" type="Button" parent="ui" index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 627.0
margin_top = 512.0
margin_right = 727.0
margin_bottom = 542.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Launch wave"
flat = false
align = 1

[node name="anouncement" parent="ui" index="7" instance=ExtResource( 13 )]

anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -20.0
margin_right = 20.0
margin_bottom = 40.0
_sections_unfolded = [ "Rect" ]

[node name="end_game_text" parent="ui" index="8" instance=ExtResource( 14 )]

visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = 218.0
margin_top = 538.0
margin_right = 571.0
margin_bottom = 595.0
_sections_unfolded = [ "Rect" ]

[node name="Panel" type="Panel" parent="ui" index="9"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 765.0
margin_top = 215.0
margin_right = 822.0
margin_bottom = 245.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="ui/Panel" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Lives: 3"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="fire_changed" from="." to="ui/ressource_fire" method="set_amount"]

[connection signal="ice_changed" from="." to="ui/ressource_ice" method="set_amount"]

[connection signal="wood_changed" from="." to="ui/ressource_wood" method="set_amount"]

[connection signal="pressed" from="ui/start_wave" to="." method="_on_start_wave_pressed"]

[connection signal="pressed" from="ui/end_game_text/Button" to="." method="_on_restart_pressed"]


[editable path="ui/ressource_fire"]
[editable path="ui/ressource_ice"]
[editable path="ui/ressource_wood"]
[editable path="ui/end_game_text"]
